Practice/admin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: admin-pod
  name: admin-pod
spec:
  containers:
  - image: busybox
    name: admin-pod
    command: ["sleep" ,"3200"]
    securityContext:
      capabilities:
        add: ["SYS_TIME"]
