Practice/initContainer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-k8s
  labels:
    app.kubernetes.io/name: nginx-k8s
spec:
  containers:
  - name: nginx-k8s
    image: nginx
    volumeMounts:
    - mountPath: "/usr/share/nginx/html"
      name: workdir
  volumes:
  - name: workdir
    emptyDir: {}
