Practice/multipod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: multipod
  name: multipod
spec:
  containers:
  - image: nginx
    name: container1
  - image: busybox  
    name: container2
    command: ["sleep" ,"4800"]
