Practice/pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-pod
spec:
  volumes:
    - name: mypvlog
      persistentVolumeClaim:
        claimName: pv-claim-log
  containers:
    - name: my-nginx-pod
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/log"
          name: mypvlog
