Practice/exposePod.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: audit-web-app
  name: audit-web-app
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30002
  selector:
    run: audit-web-app
  type: NodePort
